--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "rails-erb-loader": "^5.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.0",
     "resolve-url-loader": "^2.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
